src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Free_school_college_meals__c</fullName>
        <label>Free School/College Meals?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GF_Other_please_specify__c</fullName>
        <description>When &apos;Other&apos; is selected for &apos;where did you hear about us&apos;.</description>
        <label>Other - How You Heard About Us</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__First_Volunteer_Date__c</fullName>
        <inlineHelpText>The date of the first Volunteer Hours record for this Contact with a status of Completed (read only).</inlineHelpText>
        <label>First Volunteer Date</label>
        <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Start_Date__c</summarizedField>
        <summaryFilterItems>
            <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Last_Volunteer_Date__c</fullName>
        <inlineHelpText>The date of the most recent Volunteer Hours record for this Contact with a status of Completed (read only).</inlineHelpText>
        <label>Last Volunteer Date</label>
        <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__End_Date__c</summarizedField>
        <summaryFilterItems>
            <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Unique_Volunteer_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer Unique Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Auto_Reminder_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, this Contact will not receive automatic reminder emails about their upcoming Volunteer Shifts.</inlineHelpText>
        <label>Volunteer Auto-Reminder Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Availability__c</fullName>
        <label>Volunteer Availability</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekdays</fullName>
                </value>
                <value>
                    <fullName>Weekends</fullName>
                </value>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Hours__c</fullName>
        <inlineHelpText>Total number of Volunteer Hours with a Status of Completed. Hours with other status values aren&apos;t included.</inlineHelpText>
        <label>Volunteer Hours</label>
        <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Hours_Worked__c</summarizedField>
        <summaryFilterItems>
            <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Last_Web_Signup_Date__c</fullName>
        <inlineHelpText>The date of this Contact&apos;s most recent online volunteer signup. This field is automatically populated from the web signup form. Used to trigger workflow for notification and thank you emails.</inlineHelpText>
        <label>Volunteer Last Web Signup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Manager_Notes__c</fullName>
        <inlineHelpText>Internal notes about the volunteer from your organizational staff.</inlineHelpText>
        <label>Volunteer Manager Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Notes__c</fullName>
        <inlineHelpText>Notes from the volunteer. If the volunteer included comments in the web signup form, those comments will be appended here.</inlineHelpText>
        <label>Volunteer Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Organization__c</fullName>
        <inlineHelpText>The organization, company, or group the Contact is volunteering on behalf of.</inlineHelpText>
        <label>Volunteer Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Skills__c</fullName>
        <inlineHelpText>Indicates which skills this Contact has. You can filter on skills when you look for volunteers for particular Jobs.</inlineHelpText>
        <label>Volunteer Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Computer usage</fullName>
                </value>
                <value>
                    <fullName>Manual labor</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Fundraising</fullName>
                </value>
                <value>
                    <fullName>Event Planning</fullName>
                </value>
                <value>
                    <fullName>Landscaping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Status__c</fullName>
        <label>Volunteer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>New Sign Up</fullName>
                </value>
                <value>
                    <fullName>Prospective</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>This field is configured in NPSP Settings &gt; Relationships &gt; Relationships as the Gender field. Do not delete this field unless you remove the reference or select another Gender field there.</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Non-Binary</fullName>
                </value>
                <value>
                    <fullName>Prefer Not To Say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GeneralUnderstanding__c</fullName>
        <inlineHelpText>Tick the boxes you agree with:</inlineHelpText>
        <label>General Understanding</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pictures help me to understand a task</fullName>
                </value>
                <value>
                    <fullName>Sometimes I know the answer, but I do not know how to say it in English</fullName>
                </value>
                <value>
                    <fullName>It helps me when teachers translate worksheets into my language</fullName>
                </value>
                <value>
                    <fullName>It helps me when I can speak to someone, in my first language, about the work</fullName>
                </value>
                <value>
                    <fullName>Sometimes, I don&apos;t understand what the teacher is saying</fullName>
                </value>
                <value>
                    <fullName>None of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GradeAwardedforMaths__c</fullName>
        <label>Grade Awarded for Maths</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Awarded_for_English__c</fullName>
        <label>Grade Awarded for English</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Had_extra_help_from_tutor__c</fullName>
        <description>Has student had extra help from a tutor in maths before (this does not include help from teachers in
school or college)</description>
        <inlineHelpText>Has student had extra help from a tutor in maths before (this does not include help from teachers in
school or college)</inlineHelpText>
        <label>Had Extra Help From Tutor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_no_prefernottosay</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HappytoReceiveSMS__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>[I am happy to receive text/Whatsapp messages or emails from Get Further about tutoring sessions and upcoming events.]</inlineHelpText>
        <label>Happy to Receive SMS?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HowLongSpeakingEnglish__c</fullName>
        <label>How Long Speaking English</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All my life</fullName>
                </value>
                <value>
                    <fullName>From between age 1 and age 5</fullName>
                </value>
                <value>
                    <fullName>From between age 6 and age 11</fullName>
                </value>
                <value>
                    <fullName>From between age 12 to age 16</fullName>
                </value>
                <value>
                    <fullName>From age 17 or later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrity_Concern__c</fullName>
        <label>Integrity Concern</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integrity_Score__c</fullName>
        <inlineHelpText>Score should be out of 5</inlineHelpText>
        <label>Integrity Score (Deprecated)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LanguageSpokenatHome__c</fullName>
        <label>Language Spoken at Home</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Living_In_UK_If_Successful__c</fullName>
        <description>If your application is successful, will you be living in the UK while tutoring with Get Further?</description>
        <label>Living In UK, If Successful?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Preference_Next_Academic_Year__c</fullName>
        <description>Tutor&apos;s preferred tutoring locations, available in the next academic year (where college programmes will be running).</description>
        <label>Location Preference - Next Academic Year</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Location_Preference_Next_Academic_Year</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>London_Residency_Next_Academic_Year__c</fullName>
        <description>The London Borough this tutor plans to live in, during the next academic year.</description>
        <label>London Residency - Next Academic Year</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>London_Boroughs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Matching_Status__c</fullName>
        <label>Matching Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Offer</fullName>
                </value>
                <value>
                    <fullName>Offer Made</fullName>
                </value>
                <value>
                    <fullName>Matched Single</fullName>
                </value>
                <value>
                    <fullName>Matched Multiple</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maths_Test_Outcome__c</fullName>
        <description>The outcome of the prospective tutor&apos;s maths subject knowledge test. This is pre-screening before their application is reviewed.</description>
        <label>Maths Test Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subject_Knowledge_Test_Outcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maths_Tutor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This tutor applicant has been accepted for matching to Maths tutoring placements.</description>
        <label>Maths Tutor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Steps_After_Course__c</fullName>
        <inlineHelpText>What do you see as your next steps once you have completed this course(s)?</inlineHelpText>
        <label>Next Steps After Course</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_steps__c</fullName>
        <description>What do you see as your next steps once you once you have completed this course(s)?</description>
        <inlineHelpText>What does student see as next steps once course completed.</inlineHelpText>
        <label>Next Steps</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_A_Level_How_They_Meet_Requirements__c</fullName>
        <label>No A Level - How They Meet Requirements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_GCSE_How_They_Meet_Requirements__c</fullName>
        <description>Please specify how you meet the subject knowledge requirements (e.g. whether you have a higher level of English or maths qualification)</description>
        <inlineHelpText>When the applicant does not have a UK GCSE (or equivalent) grade C or above in maths and English Language</inlineHelpText>
        <label>No GCSE - How They Meet Requirements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_On_Concerns__c</fullName>
        <inlineHelpText>Any concerns regarding the applicant&apos;s competencies?</inlineHelpText>
        <label>Notes On Concerns</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Online_Application_Outcome__c</fullName>
        <formula>IF
(AND
( Online_Application_Total_Score__c &gt;= 1, Online_Application_Total_Score__c &lt;= 9), &quot;Unsuccessful&quot;,
IF
(AND
(Online_Application_Total_Score__c &gt;= 10, Online_Application_Total_Score__c &lt;= 18), &quot;Hold&quot;,
IF
(AND
(Online_Application_Total_Score__c &gt;= 19, Online_Application_Total_Score__c &lt;= 36), &quot;Invite to AC&quot;,
&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online Application Outcome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Application_Total_Score__c</fullName>
        <formula>Q1_Score__c +
(2 * Q2_Score__c) +
(2 * Q3_Score__c) +
Q4_Score__c +
Q5_Score__c +
Q6_Score__c +
Q7_Score__c +
Q8_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online Application Total Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Periods_When_You_Are_Unable_to_Tutor__c</fullName>
        <label>Periods When Unable To Tutor</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Please_specify_dietary_requirements__c</fullName>
        <label>Please specify dietary requirements</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Please_specify_employment__c</fullName>
        <label>Please specify employment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode_of_Your_Address_During_Tuition__c</fullName>
        <label>Postcode Of Your Address During Tuition</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postgraduate_Qualification__c</fullName>
        <label>Postgraduate Qualification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phd</fullName>
                </value>
                <value>
                    <fullName>Masters</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Postgraduate_Subject__c</fullName>
        <label>Postgraduate Subject</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreferredWorkLocations__c</fullName>
        <description>Preferred colleges (from Lead application)</description>
        <label>Preferred Work LocationsDEPRECATED</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Preferred_Work_Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Colleges</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_London_Areas__c</fullName>
        <description>Other areas of London a tutor may be able to travel to.</description>
        <label>Preferred London Areas</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>London</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_London_Locations__c</fullName>
        <description>Locations in London where programmes are expected to run, from which tutors in London can declare their ability to travel to.</description>
        <label>Preferred London Locations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Preferred_London_Locations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Work_Locations__c</fullName>
        <label>Preferred Work Locations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bilborough College</fullName>
                </value>
                <value>
                    <fullName>Boston College</fullName>
                </value>
                <value>
                    <fullName>Brooksby Melton College</fullName>
                </value>
                <value>
                    <fullName>Burton and South Derbyshire College</fullName>
                </value>
                <value>
                    <fullName>Chesterfield College</fullName>
                </value>
                <value>
                    <fullName>Derby College</fullName>
                </value>
                <value>
                    <fullName>Gateway Sixth Form College</fullName>
                </value>
                <value>
                    <fullName>Grantham College</fullName>
                </value>
                <value>
                    <fullName>Homefield College</fullName>
                </value>
                <value>
                    <fullName>Leicester College</fullName>
                </value>
                <value>
                    <fullName>Lincoln College</fullName>
                </value>
                <value>
                    <fullName>Linkage College of Further Education</fullName>
                </value>
                <value>
                    <fullName>Loughborough College</fullName>
                </value>
                <value>
                    <fullName>Moulton College</fullName>
                </value>
                <value>
                    <fullName>New College Stamford</fullName>
                </value>
                <value>
                    <fullName>Northampton College</fullName>
                </value>
                <value>
                    <fullName>Nottingham College (The)</fullName>
                </value>
                <value>
                    <fullName>Portland College</fullName>
                </value>
                <value>
                    <fullName>Regent College</fullName>
                </value>
                <value>
                    <fullName>RNN Group</fullName>
                </value>
                <value>
                    <fullName>Sense</fullName>
                </value>
                <value>
                    <fullName>Stephenson College</fullName>
                </value>
                <value>
                    <fullName>West Nottinghamshire College Group</fullName>
                </value>
                <value>
                    <fullName>WQE and Regent College Group</fullName>
                </value>
                <value>
                    <fullName>Barnfield College</fullName>
                </value>
                <value>
                    <fullName>Bedford College Group (The)</fullName>
                </value>
                <value>
                    <fullName>Cambridge Regional College</fullName>
                </value>
                <value>
                    <fullName>Central Bedfordshire College</fullName>
                </value>
                <value>
                    <fullName>Chelmsford College</fullName>
                </value>
                <value>
                    <fullName>City College Norwich</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Work_Region__c</fullName>
        <description>What areas would you be happy to work in? *</description>
        <label>Preferred Work RegionDEPRECATED</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Working_Pattern__c</fullName>
        <label>Preferred Working Pattern</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday 9:00 – 12:00</fullName>
                </value>
                <value>
                    <fullName>Monday 12:00 – 16:00</fullName>
                </value>
                <value>
                    <fullName>Monday 16:00-19:00</fullName>
                </value>
                <value>
                    <fullName>Tuesday 9:00 – 12:00</fullName>
                </value>
                <value>
                    <fullName>Tuesday 12:00 – 16:00</fullName>
                </value>
                <value>
                    <fullName>Tuesday 16:00-19:00</fullName>
                </value>
                <value>
                    <fullName>Wednesday 9:00 – 12:00</fullName>
                </value>
                <value>
                    <fullName>Wednesday 12:00 – 16:00</fullName>
                </value>
                <value>
                    <fullName>Wednesday 16:00-19:00</fullName>
                </value>
                <value>
                    <fullName>Thursday 9:00 – 12:00</fullName>
                </value>
                <value>
                    <fullName>Thursday 12:00 – 16:00</fullName>
                </value>
                <value>
                    <fullName>Thursday 16:00-19:00</fullName>
                </value>
                <value>
                    <fullName>Friday 9:00 – 12:00</fullName>
                </value>
                <value>
                    <fullName>Friday 12:00 – 16:00</fullName>
                </value>
                <value>
                    <fullName>Friday 16:00-19:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_time_for_us_to_give_you_a_call__c</fullName>
        <label>Preferred Time for Us To Give You A Call</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousAttemptGCSEinMaths__c</fullName>
        <label>Previous Attempt GCSE in Maths?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_no_prefernottosay</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Attempt_GCSE_in_English__c</fullName>
        <inlineHelpText>Have you previously attempted a GCSE in English?</inlineHelpText>
        <label>Previous Attempt GCSE in English?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Privacy_Policy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>I have read and understood Get Further’s Privacy Policy for tutors.</description>
        <label>Privacy Policy Accepted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Professionalism_and_Reliability_Concern__c</fullName>
        <label>Professionalism and Reliability Concern</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Professionalism_and_Reliability_Score__c</fullName>
        <inlineHelpText>Score should be out of 5</inlineHelpText>
        <label>Professionalism and Reliability Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Programme_Officer_Name__c</fullName>
        <label>Programme Officer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q1_Academic_Background__c</fullName>
        <defaultValue>&quot;Please review this applicant&apos;s academic background on record&quot;</defaultValue>
        <label>Q1 Academic Background</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q1_Score__c</fullName>
        <inlineHelpText>Please provide a score between 0-4.</inlineHelpText>
        <label>Q1 Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_Reason_for_choosing_Get_Further__c</fullName>
        <label>Q2 Reason For Choosing Get Further</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q2_Score__c</fullName>
        <inlineHelpText>Please provide a score between 0-4. (Score will be weighted x2 in Total)</inlineHelpText>
        <label>Q2 Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3_Effective_Tutor_Skills__c</fullName>
        <label>Q3 Effective Tutor Skills</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q3_Score__c</fullName>
        <inlineHelpText>Please provide a score between 0-4. (Score will be weighted x2 in Total)</inlineHelpText>
        <label>Q3 Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q4_Youth_Working_Experience__c</fullName>
        <label>Q4 Youth Working Experience</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q5_Difference_Through_Communication__c</fullName>
        <label>Q5 Difference Through Communication</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q6_Exceeding_Expectations_Experience__c</fullName>
        <label>Q6 Exceeding Expectations Experience</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q7_Barriers_Students_Face_Today__c</fullName>
        <label>Q7 Barriers Students Face Today?</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q8_Any_Additional_Info__c</fullName>
        <label>Q8 Any Additional Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RSVP_Date__c</fullName>
        <label>RSVP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RateEnglishLanguageSkills__c</fullName>
        <label>Rate English Language Skills</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Poor_Excellent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RateEnglishSkillsReading__c</fullName>
        <label>Rate English Skills: Reading</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Poor_Excellent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RateEnglishSkillsSpeaking__c</fullName>
        <label>Rate English Skills : Speaking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Very good</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RateEnglishSkillsUnderstandSpeech__c</fullName>
        <inlineHelpText>How would you rate your English language skills? [Understanding spoken English]</inlineHelpText>
        <label>Rate English Skills: Understand Speech</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Poor_Excellent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RateEnglishSkillsWriting__c</fullName>
        <label>Rate English Skills: Writing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Poor_Excellent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_tutor_will_help_choice__c</fullName>
        <description>Reason for your choice of answer to &apos;Do you think having a tutor will help you to reach your next steps? Please indicate (x) in the relevant&apos;</description>
        <inlineHelpText>Reason for your choice of answer to &apos;Do you think having a tutor will help you to reach your next steps? Please indicate (x) in the relevant&apos;</inlineHelpText>
        <label>Reason for tutor will help choice</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>